# tank_wars_server

./: Cargo.toml  README.md  diesel.toml  world.physics
Maps/: GreenWorld.json
Maps/MapObjects/: MapObjects.polygons
Tanks/: A.Q.U.A..json  Bullets.polygons  Forwarder.json  Grasshopper.json  HellRider.json  Sandstorm.json  TanksBodies.polygons  Titan.json
migrations/2022-05-07-160148_create_players/: mod.rs
migrations/2022-05-08-075823_create_players/: down.sql  up.sql
src/: data.rs  db.rs  main.rs  network.rs  physics.rs  schema.rs
src/data/: chest.rs  daily_item.rs  map.rs  player.rs  tank.rs  tank_info.rs
