[package]
name = "tank_wars_server"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.7"

tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "fs", "sync"] }
futures = { default-features = false, version = "0.3.21" }

tracing = "0.1.34"
tracing-subscriber = "0.3.11"

quinn = "0.8.2"

rcgen = "0.9.2"
rustls = { default-features = false, version = "0.20.5" }

color-eyre = "0.6.1"

directories-next = "2.0.0"

rmp-serde = "1.1.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }

dashmap = "5.3.3"

lazy_static = "1.4.0"

chrono = {version = "0.4.19", features = ["serde"] }

rs-snowflake = "0.6.0"

diesel = { version = "1.4.8", features = ["postgres", "chrono"] }

thread_local = "1.1.4"
num_cpus = "1.13.1"

fast_rsync = "0.1.4"

[profile.release]
strip = true
