[package]
name = "tank_wars_server"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.8"

tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
futures = { default-features = false, version = "0.3.21", features = ["executor"] }

tracing = "0.1.36"
tracing-subscriber = "0.3.15"

quinn = "0.8.3"

rcgen = "0.9.3"
rustls = { default-features = false, version = "0.20.6" }

color-eyre = "0.6.2"

directories-next = "2.0.0"

rmp-serde = "1.1.0"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }

dashmap = "5.3.4"

state = { version = "0.5.3", features = ["tls"] }

chrono = { version = ">=0.4.20", features = ["serde"] }

rs-snowflake = "0.6.0"

diesel = { version = "1.4.8", features = ["postgres", "chrono"] }

fast_rsync = "0.1.4"

rand = "0.8.5"
regex = "1.6.0"

minstant = "0.1.1"
strum = { version = "0.24.1", features = ["derive"] }

rapier2d = { version = "0.14.0", features = ["simd-stable", "serde-serialize"] }

[profile.release]
strip = true
codegen-units = 1
